--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Edit.cshtml
@@ -53,7 +53,10 @@
 }
 <script type="text/javascript">
   $(document).ready(function () {
-    $("#OriginalPlacementCode").val($("#PlacementPointCode").val());
-    $("#OriginalLanguage").val($("#Language").children("option:selected").val());
+    var table = $('#TextLocalizations').DataTable();
+
+    new $.fn.dataTable.Responsive(table, {
+      details: true
+    });
   });
 </script>
