--- a/XOSkinWebApp/Areas/Administration/Views/Users/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Users/Edit.cshtml
@@ -82,5 +82,20 @@
 <script type="text/javascript">
   $(document).ready(function () {
     $("#OriginalEmailAddress").val($("#EmailAddress").val());
+
+    document.getElementById('HomePhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('WorkPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
+
+    document.getElementById('AdditionalPhoneNumber').addEventListener('input', function (e) {
+      var x = e.target.value.replace(/\D/g, '').match(/(\d{0,3})(\d{0,3})(\d{0,4})/);
+      e.target.value = !x[2] ? x[1] : '(' + x[1] + ') ' + x[2] + (x[3] ? '-' + x[3] : '');
+    });
   });
 </script>
