--- a/XOSkinWebApp/Views/Home/Index.cshtml
+++ b/XOSkinWebApp/Views/Home/Index.cshtml
@@ -21,10 +21,7 @@
   $(document).ready(function () {
     $.fn.center = function () {
       this.css("position", "absolute");
-      this.css("top", Math.max(0, (
-        ($(window).height() - $(this).outerHeight()) / 2) +
-        $(window).scrollTop()) + "px"
-      );
+      this.css("top", "98px");
       this.css("left", Math.max(0, (
         ($(window).width() - $(this).outerWidth()) / 2) +
         $(window).scrollLeft()) + "px"
