--- a/XOSkinWebApp/Views/Shared/_LoginPartial.cshtml
+++ b/XOSkinWebApp/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item form-inline">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Your Account</a>
+        <a  class="nav-link text-dark text-nowrap" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Your Account</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
